Projects index wraps correctly and overlaps splash on scroll

--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -39,6 +39,7 @@
 }
 
 .splash-container {
+  z-index: -2;
   position: fixed;
   top: -23px;
   letter-spacing: 5px;
