--- a/app/assets/stylesheets/api/projects.scss
+++ b/app/assets/stylesheets/api/projects.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the Api::Projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.explore-projects-index-item-container {
+  width: 100vw;
+  background-color: white;
+  position: relative;
+  top: 215px;
+  z-index: -1;
+}
+
+.projects-index-item-container  {
+  position: relative;
+  top: 100px;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-flow: row wrap;
+}
+
+
+.projects-index-item {
+  width: 200px;
+  height: 300px;
+  background-color: red;
+  border: 1px solid black;
+  margin-bottom: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
